finalize interface for kmeans

--- a/site1/home/Templates/laplace.html
+++ b/site1/home/Templates/laplace.html
@@ -299,7 +299,7 @@
 </head>
 <body>
   <div class="sidebar">
-    <h2><i class="fas fa-database"></i> Home</h2>
+    <h2><i class="fas fa-database"></i> Home </h2>
     <ul>
       <!-- Trang chủ -->
       <li>
@@ -428,7 +428,7 @@
     <div class="form-container">
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            <label for="file">Chọn file (CSV/Excel):</label>
+            <label for="file">Upload File:</label>
             <input type="file" id="file" name="file">
             <button type="submit">Tải lên</button>
         </form>
