finalize interface for gini index algorithms

--- a/site1/home/Templates/gain.html
+++ b/site1/home/Templates/gain.html
@@ -441,7 +441,7 @@
                 <label for="file" class="form-label">Upload File</label>
                 <input type="file" name="file" id="file" class="form-control" accept=".csv, .xls, .xlsx" required>
             </div>
-            <button type="submit" class="btn btn-primary">Tải lên</button>
+            <button type="submit" class="btn btn-primary">Tính toán</button>
         </form>
 
         {% if steps %}
