refine all sidebar

--- a/site1/home/Templates/HSTuongQuan.html
+++ b/site1/home/Templates/HSTuongQuan.html
@@ -288,13 +288,13 @@
           </a>
           <ul class="sub-menu" id="classification">
             <li>
-              <a href="bayes.html">
+              <a href="bayes">
                 <i class="fas fa-arrow-circle-right"></i>
                 Bayes
               </a>
             </li>
             <li>
-              <a href="laplace.html">
+              <a href="laplace">
                 <i class="fas fa-arrow-circle-right"></i>
                 Laplace
               </a>
@@ -364,7 +364,7 @@
               </a>
             </li>
             <li>
-              <a href="kohonen.html">
+              <a href="kohonen">
                 <i class="fas fa-arrow-circle-right"></i>
                 Mạng Kohonen
               </a>
