--- a/site1/home/Templates/TapPhoBien.html
+++ b/site1/home/Templates/TapPhoBien.html
@@ -288,13 +288,13 @@
           </a>
           <ul class="sub-menu" id="classification">
             <li>
-              <a href="bayes.html">
+              <a href="bayes">
                 <i class="fas fa-arrow-circle-right"></i>
                 Bayes
               </a>
             </li>
             <li>
-              <a href="laplace.html">
+              <a href="laplace">
                 <i class="fas fa-arrow-circle-right"></i>
                 Laplace
               </a>
@@ -364,7 +364,7 @@
               </a>
             </li>
             <li>
-              <a href="kohonen.html">
+              <a href="kohonen">
                 <i class="fas fa-arrow-circle-right"></i>
                 Mạng Kohonen
               </a>
@@ -382,10 +382,10 @@
       <div class="content">
         <!-- Form nhập liệu -->
         <div class="form-container">
-          <h2>Nhập Dữ Liệu</h2>
+          <h2>Nhập dữ liệu</h2>
           <form id="calculationForm">
             <div class="form-group">
-              <label for="excel_file">Upload Excel</label>
+              <label for="excel_file">Upload File</label>
               <input type="file" id="excel_file" name="file" accept=".xlsx, .xls, .csv" required />
             </div>
       
