--- a/site1/home/Templates/laplace.html
+++ b/site1/home/Templates/laplace.html
@@ -335,7 +335,7 @@
         </a>
         <ul class="sub-menu" id="classification">
           <li>
-            <a href="bayes" id="popular-link">
+            <a href="bayes">
               <i class="fas fa-arrow-circle-right"></i>
               Bayes
             </a>
@@ -464,7 +464,7 @@
                     </div>
                 {% endfor %}
 
-                <button type="submit" name="calculate">Tính xác suất</button>
+                <button type="submit" name="calculate">Tính toán</button>
             </form>
         {% endif %}
     </div>
