--- a/site1/home/Templates/home.html
+++ b/site1/home/Templates/home.html
@@ -259,12 +259,12 @@
 
     <div class="main-content">
       <div class="content-header">
-        <h1>Chào mừng bạn trở lại!</h1>
+        <h1>"Khám phá dữ liệu, mở lối tri thức!"</h1>
       </div>
       <div class="content">
         <img
           src="https://cdn.fpt-is.com/vi/khai-pha-du-lieu-la-gi-11-1715227612.png"
-          alt="Data Mining Visualization"
+          alt="Thuật toán khai thác dữ liệu"
         />
       </div>
     </div>
