--- a/site1/home/Templates/kohonen.html
+++ b/site1/home/Templates/kohonen.html
@@ -440,9 +440,9 @@
             <input type="number" name="rows" required><br><br>
             <label>Số cột (nơron):</label>
             <input type="number" name="cols" required><br><br>
-            <label>Tải file dữ liệu (CSV/Excel/TXT):</label>
+            <label>Upload File:</label>
             <input type="file" name="input_file" accept=".csv,.xlsx,.txt" required><br><br>
-            <button type="submit">Chạy Thuật Toán</button>
+            <button type="submit">Tính toán</button>
         </form>
     
         {% if result_available %}
