--- a/site1/home/Templates/gain.html
+++ b/site1/home/Templates/gain.html
@@ -4,76 +4,430 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cây Quyết Định và Information Gain</title>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
     <style>
+        .container { 
+            margin-top: 20px; 
+        }
+        .table-container { 
+            margin-top: 20px; 
+            overflow-x: auto; 
+        }
+        img { 
+            max-width: 100%; 
+            height: auto; 
+        }
+        pre { 
+            background-color: #f8f9fa; 
+            padding: 15px; 
+            border-radius: 5px; 
+            overflow-x: auto; 
+        }
         body {
+            margin: 0;
             font-family: Arial, sans-serif;
-            margin: 20px;
-        }
+            background-color: #f4f4f9;
+          }
 
-        h1 {
-            text-align: center;
+        label {
+            font-weight: bold;
         }
-
-        .upload-section {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .upload-section input[type="file"] {
+        select, input, button {
+            margin: 10px 0;
+            padding: 10px;
             font-size: 16px;
-            padding: 5px;
+            width: 100%;
+            max-width: 400px;
         }
-
-        .upload-section button {
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #4CAF50;
+        button {
+            cursor: pointer;
+            background-color: #1e293b;
             color: white;
             border: none;
-            cursor: pointer;
+            border-radius: 5px;
         }
-
-        .upload-section button:hover {
-            background-color: #45a049;
+        button:hover {
+            background-color: #1e293b;
         }
-
-        .tree-section {
-            text-align: center;
-            margin-top: 30px;
+        .error {
+            color: red;
+            font-weight: bold;
         }
-
-        .tree-section img {
-            width: 50%;
-            height: auto;
+        .result {
             margin-top: 20px;
+            padding: 10px;
+            background: #f1f1f1;
+            border-radius: 5px;
+        }
+        .hidden {
+            display: none;
         }
 
-        .rules-section {
-            margin-top: 20px;
-            text-align: left;
-            margin-left: 10%;
-        }
-
-        .rules-section pre {
-            background-color: #f4f4f4;
+        .sidebar {
+            width: 300px;
+            background-color: #1e293b;
+            color: white;
+            height: 100vh;
+            position: fixed;
             padding: 20px;
+            overflow-y: auto;
+          }
+    
+          .sidebar h2 {
+            font-size: 20px;
+            margin-bottom: 20px;
+            color: #f4f4f9;
+          }
+    
+          .sidebar ul {
+            list-style: none;
+            padding: 0;
+          }
+    
+          .sidebar ul li {
+            margin: 15px 0;
+          }
+    
+          .sidebar ul li a {
+            color: white;
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+          }
+    
+          .sidebar ul li a:hover {
+            background-color: #3b82f6;
+          }
+    
+          .sidebar ul li a#home-link {
+            color: #f8fafc;
+          }
+    
+          .sidebar ul li a i,
+          .sidebar ul li a svg {
+            margin-right: 10px;
+            flex-shrink: 0; /* Ngăn icon bị co khi chữ dài */
+          }
+    
+          .sub-menu {
+            display: block;  /* Đảm bảo submenu luôn hiển thị */
+            margin-left: 20px;
+          }
+          
+          .sub-menu li a {
+            background-color: transparent; 
+            color: #fff; 
+            display: block;
+            padding: 5px 15px;
+            padding-left: 20px;
+            text-decoration: none;
+          }
+          
+          .sub-menu li a:hover {
+            background-color: #007bff; 
+            color: #fff;
+            border-radius: 5px;
+          }
+    
+          .main-content {
+            margin-left: 400px;
+            padding: 20px;
+          }
+    
+          .content-header {
+            background-color: #f8fafc;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+          }
+    
+          .content-header h1 {
+            margin: 0;
+            font-size: 24px;
+            color: #1e293b;
+          }
+    
+          .content {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            min-height: 400px;
+            display: flex;
+            justify-content: space-between; /* Đẩy các cột cách đều nhau */
+            align-items: stretch;
+          }
+    
+          .content img {
+            max-width: 100%;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+          }
+    
+          .content p {
+            font-size: 16px;
+            color: #374151;
+          }
+    
+            .sidebar ul li a#popular-link {
+              color: #ffd700; 
+              font-weight: bold; /* Làm đậm chữ */
+            }
+    
+            .sidebar ul li a i,
+            .sidebar ul li a svg {
+              margin-right: 10px;
+              flex-shrink: 0; /* Ngăn icon bị co khi chữ dài */
+            }
+    
+            .sub-menu {
+              display: none;
+              padding-left: 20px;
+            }
+    
+            .sub-menu li {
+              margin: 10px 0;
+            }
+    
+            .sub-menu li a {
+              background-color: #3b82f6;
+            }
+    
+            .uploadexcel {
+              text-align: center;
+              margin-top: 50px;
+              color: white;
+              background-color:#1e293b;
+    
+          }
+    
+          #file-upload {
+              display: none;
+          }
+    
+          #upload-button {
+              background-color: #FFFF;
+              color: black;
+              padding: 15px 32px;
+              text-align: center;
+              text-decoration: none;
+              display: inline-block;
+              font-size: 16px;
+              margin: 4px 2px;
+              cursor: pointer; 
+    
+          }
+        
+          .form-container {
+            flex: 1; /* Chiếm một phần không gian */
+            margin-right: 20px; /* Tạo khoảng cách với kết quả */
+            background-color: #f8fafc;
+            border-radius: 5px;
+            padding: 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        
+          .form-container h2 {
+            font-size: 24px;
+            margin-bottom: 20px;
+            color: #1e293b;
+          }
+        
+          .form-group {
+            margin-bottom: 20px;
+          }
+        
+          .form-group label {
+            display: block;
+            font-size: 18px;
+            color: #1e293b;
+            margin-bottom: 5px;
+          }
+        
+          .form-group input {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
             border: 1px solid #ccc;
             border-radius: 5px;
-            max-width: 80%;
-            white-space: pre-wrap;
+          }
+        
+          .form-group button {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #1e293b;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+          }
+        
+          .form-group button:hover {
+            background-color: #1e293b;
+          }
+        
+          .result-container {
+            flex: 1; /* Chiếm một phần không gian */
+            background-color: #f8fafc;
+            border-radius: 5px;
+            padding: 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
-
-        .error-message {
-            color: red;
-            text-align: center;
+        
+          .result-container h2 {
+            font-size: 24px;
+            color: #1e293b;
+            margin-bottom: 20px;
+          }
+        
+          .result-container ul {
+            list-style: none;
+            padding: 0;
+          }
+        
+          .result-container li {
             font-size: 18px;
-            margin-top: 20px;
+            color: #374151;
+            margin-bottom: 10px;
+          }
+    
+          .result-item {
+            margin-bottom: 30px; /* Tạo khoảng cách giữa các dòng */
         }
     </style>
 </head>
 <body>
-    <h1>Cây Quyết Định và Information Gain</h1>
-
+    <div class="sidebar">
+        <h2><i class="fas fa-database"></i> Home</h2>
+        <ul>
+          <!-- Trang chủ -->
+          <li>
+            <a href="#" id="home-link" onclick="showHome()">
+              <i class="fas fa-home"></i>
+              <span>Trang chủ</span>
+            </a>
+          </li>
+      
+          <!-- Tiền xử lý dữ liệu -->
+          <li>
+            <a href="{% url 'HSTuongQuan' %}">
+            <i class="fas fa-chart-line"></i>
+            Tiền xử lý dữ liệu
+          </a>
+        </li>
+      
+          <!-- Tập phổ biến -->
+          <li>
+            <a href="{% url 'TapPhoBien' %}">
+              <i class="fas fa-layer-group"></i>
+              Tập phổ biến và Luật kết hợp
+            </a>
+          </li>
+      
+          <!-- Phân lớp -->
+          <li>
+            <a href="#" id="popular-link" onclick="toggleSubMenu('classification')">
+              <svg xmlns="http://www.w3.org/2000/svg" height="20px" width="20px" viewBox="0 -960 960 960" fill="#ffffff">
+                <path d="M600-120v-120H440v-400h-80v120H80v-320h280v120h240v-120h280v320H600v-120h-80v320h80v-120h280v320H600ZM160-760v160-160Zm520 400v160-160Zm0-400v160-160Zm0 160h120v-160H680v160Zm0 400h120v-160H680v160ZM160-600h120v-160H160v160Z" />
+              </svg>
+              <span>Phân lớp</span>
+            </a>
+            <ul class="sub-menu" id="classification">
+              <li>
+                <a href="bayes" id="popular-link">
+                  <i class="fas fa-arrow-circle-right"></i>
+                  Bayes
+                </a>
+              </li>
+              <li>
+                <a href="laplace">
+                  <i class="fas fa-arrow-circle-right"></i>
+                  Laplace
+                </a>
+              </li>
+              <li>
+                <a href="#" onclick="toggleSubMenu('decisionTree')">
+                  <i class="fas fa-arrow-circle-right"></i>
+                  Cây quyết định
+                </a>
+                <ul class="sub-menu" id="decisionTree">
+                  <li>
+                    <a href="{% url 'gain' %}">
+                      <i class="fas fa-sitemap"></i>
+                      Gain
+                    </a>
+                  </li>
+                  <li>
+                    <a href="{% url 'gini' %}">
+                      <i class="fas fa-tree"></i>
+                      Gini
+                    </a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+      
+          <!-- Tập thô -->
+          <li>
+            <a href="#" onclick="toggleSubMenu('reducts')">
+              <i class="fas fa-stream"></i>
+              Tập thô
+            </a>
+            <ul class="sub-menu" id="reducts">
+              <li>
+                <a href="{% url 'dependency' %}">
+                  <i class="fas fa-arrow-circle-right"></i>
+                  Khảo sát sự phụ thuộc
+                </a>
+              </li>
+              <li>
+                <a href="{% url 'approximation' %}">
+                  <i class="fas fa-arrow-circle-right"></i>
+                  Tính xấp xỉ
+                </a>
+              </li>
+              <li>
+                <a href="{% url 'reduct' %}">
+                  <i class="fas fa-arrow-circle-right"></i>
+                  Tính các tập thô
+                </a>
+              </li>
+            </ul>
+          </li>
+      
+          <!-- Gom cụm -->
+          <li>
+            <a href="#" onclick="toggleSubMenu('clustering')">
+              <i class="fas fa-object-group"></i>
+              Gom cụm
+            </a>
+            <ul class="sub-menu" id="clustering">
+              <li>
+                <a href="{% url 'kmeans' %}">
+                  <i class="fas fa-arrow-circle-right"></i>
+                  K-Means
+                </a>
+              </li>
+              <li>
+                <a href="kohonen">
+                  <i class="fas fa-arrow-circle-right"></i>
+                  Mạng Kohonen
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+<div class="main-content">
     <div class="upload-section">
         <h2>Chọn Tệp Dữ Liệu (Excel)</h2>
         <form method="POST" enctype="multipart/form-data">
@@ -89,7 +443,10 @@
             <p>{{ error }}</p>
         </div>
     {% endif %}
-
+    <h2>Chỉ số Gain của từng thuộc tính</h2>
+    {% for attribute, gain in gain_values.items %}
+    <li>{{ attribute }}: {{ gain|floatformat:4 }}</li>
+    {% endfor %}
     {% if image_url %}
         <div class="tree-section">
             <h2>Cây Quyết Định</h2>
@@ -101,5 +458,6 @@
             <pre>{{ rules }}</pre>
         </div>
     {% endif %}
+</div>
 </body>
 </html>
