--- a/site1/home/Templates/approximation.html
+++ b/site1/home/Templates/approximation.html
@@ -371,7 +371,7 @@
     
      <div class="content">
         <div class="form-container">
-          <h1>Nhâp dữ liệu</h1>
+          <h1>Nhập dữ liệu</h1>
       
           <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
