delete unnecessary files

--- a/site1/home/Templates/HSTuongQuan.html
+++ b/site1/home/Templates/HSTuongQuan.html
@@ -386,7 +386,7 @@
               <form id="calculationForm" enctype="multipart/form-data" method="post">
                 {% csrf_token %}
                 <div class="form-group">
-                  <label for="excel_file">Upload Excel</label>
+                  <label for="excel_file">Upload File</label>
                   <input type="file" id="excel_file" name="file" accept=".xlsx, .xls, .csv" required />
                 </div>
                 <div class="form-group">
