--- a/site1/home/Templates/gini.html
+++ b/site1/home/Templates/gini.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <style>
+      
         .container { 
             margin-top: 20px; 
         }
@@ -207,7 +208,29 @@
               background-color:#1e293b;
     
           }
-    
+          .sub-menu {
+            display: none; /* Ẩn submenu ban đầu */
+            margin-left: 20px; /* Thụt lề so với menu chính */
+            }
+      
+          .sub-menu li a {
+            background-color: transparent; /* Xóa màu nền mặc định */
+            color: #fff; /* Màu chữ */
+            display: block; /* Hiển thị dạng block */
+            padding: 5px 15px;
+            padding-left: 20px; /* Thụt thêm lề cho mục con */
+            text-decoration: none;
+            }
+      
+            .sub-menu li a:hover {
+              background-color: #007bff; /* Màu xanh dương khi hover */
+              color: #fff; /* Màu chữ vẫn trắng khi hover */
+              border-radius: 5px; /* Thêm góc bo tròn */
+            }
+      
+            .sidebar ul li.active > .sub-menu {
+              display: block;
+            }
           #file-upload {
               display: none;
           }
@@ -309,7 +332,7 @@
         <ul>
           <!-- Trang chủ -->
           <li>
-            <a href="#" id="home-link" onclick="showHome()">
+            <a  href="{% url 'homepage' %}">
               <i class="fas fa-home"></i>
               <span>Trang chủ</span>
             </a>
@@ -332,48 +355,48 @@
           </li>
       
           <!-- Phân lớp -->
-          <li>
-            <a href="#" id="popular-link" onclick="toggleSubMenu('classification')">
-              <svg xmlns="http://www.w3.org/2000/svg" height="20px" width="20px" viewBox="0 -960 960 960" fill="#ffffff">
-                <path d="M600-120v-120H440v-400h-80v120H80v-320h280v120h240v-120h280v320H600v-120h-80v320h80v-120h280v320H600ZM160-760v160-160Zm520 400v160-160Zm0-400v160-160Zm0 160h120v-160H680v160Zm0 400h120v-160H680v160ZM160-600h120v-160H160v160Z" />
-              </svg>
-              <span>Phân lớp</span>
-            </a>
-            <ul class="sub-menu" id="classification">
-              <li>
-                <a href="bayes" id="popular-link">
-                  <i class="fas fa-arrow-circle-right"></i>
-                  Bayes
-                </a>
-              </li>
-              <li>
-                <a href="laplace">
-                  <i class="fas fa-arrow-circle-right"></i>
-                  Laplace
-                </a>
-              </li>
-              <li>
-                <a href="#" onclick="toggleSubMenu('decisionTree')">
-                  <i class="fas fa-arrow-circle-right"></i>
-                  Cây quyết định
-                </a>
-                <ul class="sub-menu" id="decisionTree">
-                  <li>
-                    <a href="{% url 'gain' %}">
-                      <i class="fas fa-sitemap"></i>
-                      Gain
-                    </a>
-                  </li>
-                  <li>
-                    <a href="{% url 'gini' %}">
-                      <i class="fas fa-tree"></i>
-                      Gini
-                    </a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </li>
+<li>
+  <a href="#" id="popular-link" onclick="toggleSubMenu('classification')">
+    <svg xmlns="http://www.w3.org/2000/svg" height="20px" width="20px" viewBox="0 -960 960 960" fill="#ffffff">
+      <path d="M600-120v-120H440v-400h-80v120H80v-320h280v120h240v-120h280v320H600v-120h-80v320h80v-120h280v320H600ZM160-760v160-160Zm520 400v160-160Zm0-400v160-160Zm0 160h120v-160H680v160Zm0 400h120v-160H680v160ZM160-600h120v-160H160v160Z" />
+    </svg>
+    <span>Phân lớp</span>
+  </a>
+  <ul class="sub-menu" id="classification">
+    <li>
+      <a href="{% url 'bayes' %}">
+        <i class="fas fa-arrow-circle-right"></i>
+        Bayes
+      </a>
+    </li>
+    <li>
+      <a href="{% url 'laplace' %}">
+        <i class="fas fa-arrow-circle-right"></i>
+        Laplace
+      </a>
+    </li>
+    <li>
+      <a href="#" onclick="toggleSubMenu('decisionTree')">
+        <i class="fas fa-arrow-circle-right"></i>
+        Cây quyết định
+      </a>
+      <ul class="sub-menu" id="decisionTree">
+        <li>
+          <a href="{% url 'gain' %}">
+            <i class="fas fa-sitemap"></i>
+            Gain
+          </a>
+        </li>
+        <li>
+          <a href="{% url 'gini' %}" id="popular-link">
+            <i class="fas fa-tree"></i>
+            Gini
+          </a>
+        </li>
+      </ul>
+    </li>
+  </ul>
+</li>
       
           <!-- Tập thô -->
           <li>
@@ -417,7 +440,7 @@
                 </a>
               </li>
               <li>
-                <a href="kohonen">
+                <a href="{% url 'kohonen' %}">
                   <i class="fas fa-arrow-circle-right"></i>
                   Mạng Kohonen
                 </a>
@@ -452,6 +475,24 @@
     </div>
 </div>
     <!-- Bootstrap JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+    
+    <script>
+      function toggleSubMenu(menuId) {
+        const menu = document.getElementById(menuId);
+        if (menu) {
+          if (menu.style.display === "block") {
+            menu.style.display = "none";
+          } else {
+            menu.style.display = "block";
+          }
+        }
+      }
+
+      // Xử lý hiển thị trang "Trang chủ"
+      function showHome() {
+        alert("Bạn đang ở trang chủ!");
+      }
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"> 
 </body>
 </html>
